--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,9 @@ deps = -rdev-requirements.txt
 install_command = pip install --pre {opts} {packages}
 
 [testenv:functional]
-commands = amo2kinto -s http://localhost:8888/v1 --amo-server https://addons-dev.allizom.org/ -S schemas.json
+commands =
+    amo2kinto -s http://localhost:8888/v1 --amo-server https://addons.mozilla.org/ -S schemas.json
+    kinto2xml -s http://localhost:8888/v1
 
 [testenv:flake8]
 commands = flake8 kinto2xml
