--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ install_command = pip install --pre {opts} {packages}
 
 [testenv:functional]
 commands =
-    json2kinto -s http://localhost:8888/v1 --amo-server https://addons.mozilla.org/ -S schemas.json
+    json2kinto -s http://localhost:8888/v1 --addons-server https://addons.mozilla.org/ -S schemas.json
     kinto2xml -s http://localhost:8888/v1
 
 [testenv:flake8]
