--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 cffi==1.6.0
-cryptography==1.3.1
-enum34==1.1.4
+cryptography==1.3.2
+enum34==1.1.6
+functools32==3.2.3.post2
 idna==2.1
 ipaddress==1.0.16
-kinto-client==4.1.0
+jsonschema==2.5.1
+kinto-client==5.0.0
 lxml==3.6.0
 ndg-httpsclient==0.4.0
 pyasn1==0.1.9
 pycparser==2.14
 pyOpenSSL==16.0.0
-requests==2.9.1
+requests==2.10.0
 six==1.10.0
 Unidecode==0.4.19
 xmltodict==0.10.1
