Groub by guid when exporting the XML.

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,9 @@ install_command = pip install --pre {opts} {packages}
 
 [testenv:functional]
 commands =
-    json2kinto -s http://localhost:8888/v1 --addons-server https://addons.allizom.org/ -S schemas.json
-    kinto2xml -s http://localhost:8888/v1
+    json2kinto -s http://localhost:8888/v1 --addons-server https://addons.mozilla.org/ -S schemas.json
+    kinto2xml -s http://localhost:8888/v1 --app '\{ec8030f7-c20a-464f-9b0e-13a3a9e97384\}' --app-version 46.0 -o /tmp/generated.xml
+	xml-verifier 'https://blocklist.addons.mozilla.org/blocklist/3/\{ec8030f7-c20a-464f-9b0e-13a3a9e97384\}/46.0/' /tmp/generated.xml
 
 [testenv:flake8]
 commands = flake8 amo2kinto
