--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ functools32==3.2.3.post2
 idna==2.1
 ipaddress==1.0.16
 jsonschema==2.5.1
-kinto-client==5.0.0
+kinto-http==6.1.0
 lxml==3.6.0
 ndg-httpsclient==0.4.0
 pyasn1==0.1.9
