--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,11 @@
-cffi==1.6.0
-cryptography==1.3.2
-enum34==1.1.6
 functools32==3.2.3.post2
-idna==2.1
-ipaddress==1.0.16
+Jinja2==2.8
 jsonschema==2.5.1
-kinto-http==6.1.0
-lxml==3.6.0
-ndg-httpsclient==0.4.0
-pyasn1==0.1.9
-pycparser==2.14
-pyOpenSSL==16.0.0
-requests==2.10.0
+kinto-http==7.0.0
+lxml==3.6.4
+MarkupSafe==0.23
+python-dateutil==2.6.0
+requests==2.12.1
 six==1.10.0
 Unidecode==0.4.19
-xmltodict==0.10.1
+xmltodict==0.10.2
