Upgrade to kinto-http.py 8.0

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py34,py35,flake8
+envlist = py35,py36,flake8
 skip_missing_interpreters = True
 
 [testenv]
@@ -10,6 +10,7 @@ deps = -rdev-requirements.txt
 install_command = pip install --pre {opts} {packages}
 
 [testenv:functional]
+basepython=python3
 commands =
     json2kinto -s http://localhost:8888/v1 --addons-server https://addons.mozilla.org/ -S schemas.json
     # With v3
@@ -42,6 +43,7 @@ commands =
 
 
 [testenv:flake8]
+basepython=python3
 commands = flake8 amo2kinto
 deps =
     flake8
