--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
-cffi==1.6.0
-cryptography==1.3.2
-enum34==1.1.6
-functools32==3.2.3.post2
-idna==2.1
-ipaddress==1.0.16
-jsonschema==2.5.1
-kinto-http==6.1.0
-lxml==3.6.0
-ndg-httpsclient==0.4.0
-pyasn1==0.1.9
-pycparser==2.14
-pyOpenSSL==16.0.0
-requests==2.10.0
+certifi==2017.4.17
+chardet==3.0.3
+idna==2.5
+Jinja2==2.9.6
+jsonschema==2.6.0
+kinto-http==9.0.1
+lxml==3.7.3
+MarkupSafe==1.0
+python-dateutil==2.6.0
+requests==2.17.3
 six==1.10.0
-Unidecode==0.4.19
-xmltodict==0.10.1
+Unidecode==0.4.20
+urllib3==1.21.1
+xmltodict==0.11.0
