Add support for certItem subject and pubKeyHash attributes. Fixes #70

--- a/config/kinto.ini
+++ b/config/kinto.ini
@@ -16,9 +16,9 @@ use = egg:kinto
 #
 # http://kinto.readthedocs.io/en/latest/configuration/settings.html#storage
 #
-kinto.storage_backend = cliquet.storage.memory
-kinto.cache_backend = cliquet.cache.memory
-kinto.permission_backend = cliquet.permission.memory
+kinto.storage_backend = kinto.core.storage.memory
+kinto.cache_backend = kinto.core.cache.memory
+kinto.permission_backend = kinto.core.permission.memory
 
 #
 # Auth configuration.
@@ -34,10 +34,10 @@ kinto.experimental_collection_schema_validation = true
 # Logging configuration
 #
 
-# kinto.logging_renderer = cliquet.logs.ClassicLogRenderer
+# kinto.logging_renderer = kinto.logs.ClassicLogRenderer
 
 [loggers]
-keys = root, cliquet
+keys = root, kinto
 
 [handlers]
 keys = console
@@ -49,10 +49,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_cliquet]
+[logger_kinto]
 level = DEBUG
 handlers =
-qualname = cliquet
+qualname = kinto
 
 [handler_console]
 class = StreamHandler
