--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include LICENSE *.rst Makefile .coveragerc schemas.json dev-requirements.txt tox.ini
+include LICENSE *.rst Makefile .coveragerc dev-requirements.txt tox.ini
 recursive-include config *.ini
 recursive-include amo2kinto *.json *.xml *.tpl
